[gd_scene load_steps=13 format=4 uid="uid://bcupauqdc6cwp"]

[ext_resource type="Script" uid="uid://bl7e8ub1u4ooq" path="res://scenes/enemies/wisp/wisp_container/wisp_container.gd" id="1_54q02"]
[ext_resource type="PackedScene" uid="uid://g7iyyiv2xqy6" path="res://scenes/enemies/wisp/wisp.tscn" id="1_sq3on"]
[ext_resource type="PackedScene" uid="uid://3tvie3ok2fau" path="res://scenes/hurtbox/hurtbox.tscn" id="3_54q02"]
[ext_resource type="Script" uid="uid://c8womih1r7np5" path="res://scenes/fragment_spawner/fragment_spawner.gd" id="4_q07fn"]
[ext_resource type="Resource" uid="uid://co4smbptfeleq" path="res://scenes/enemies/wisp/wisp_container/wisp_container_fragment_config/wisp_container_fragment_config.tres" id="5_n8nvc"]

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_54q02"]
_data = PackedByteArray("AAADAAUAAAABAAAAIAAAAEAAAAB6AAAAUklGRnIAAABXRUJQVlA4TGYAAAAvH8APECegpm0DNtWz10RXtW3bMF491bycv9W2bcNiby11/gOA/5fKbpAERpEkSVkOBePgEkDQK4Bj/JtiokcAn4j+T8D4p16ZmTuTJTWBl3OzkzNRa6h0RBth9nAl834mcwDAVgA=")
size_override = Vector2(32, 64)

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_q07fn"]
_data = PackedByteArray("AAADAAUAAAABAAAAIAAAAEAAAABOAAAAUklGRkYAAABXRUJQVlA4TDkAAAAvH8APEBcgFkzmf4UazsQKSBI39f9aIBBIgt1q2YBdG4ratoGyIRuJ8Bl/Xd+I/k8Ajy+NG7UmcwMA")
size_override = Vector2(32, 64)

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_n8nvc"]
_data = PackedByteArray("AAADAAUAAAABAAAAIAAAAEAAAADSAAAAUklGRsoAAABXRUJQVlA4TL4AAAAvH8APED+gKAAZSP8UIvqxM4eCtm2Y8IdVUN2fFKRtwNTa/Cu6QJhtVH+FvY7lxAJAfIBTaqZs+7+EwY1t22qSIAOI1/eGRWqbANY7A/Da57/sXX46uoj+K3DbRvExwzO8/zDMN6/Qt8ymr7A2NXU9seWjQWWLxkq+G5YCw8ptyukV1i7v3m5e4Wg5vxtPE4OQpiIEeDUFIW0ZoIQUClBllNlvLkooMyghFSghFSju/9TOP6gstLMzCTy9VoIH")
size_override = Vector2(32, 64)

[sub_resource type="Curve" id="Curve_n8nvc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.74122804, 0.5848836), -1.3578997, -1.3578997, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fcwcm"]
curve = SubResource("Curve_n8nvc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n8nvc"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(4, 10, 1)
angle_min = -44.99999
angle_max = 45.00001
direction = Vector3(0, -1, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
gravity = Vector3(0, 250, 0)
scale_min = 0.5
scale_max = 3.0
scale_curve = SubResource("CurveTexture_fcwcm")
color = Color(0, 0.94100165, 0.9920456, 0.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n8nvc"]
size = Vector2(12, 34)

[node name="WispContainer" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_54q02")

[node name="Wisp" parent="." instance=ExtResource("1_sq3on")]
position = Vector2(0, -5)

[node name="SpriteBase" type="Sprite2D" parent="."]
z_index = -3
texture_filter = 1
texture = SubResource("PortableCompressedTexture2D_54q02")
offset = Vector2(0, -32)
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 1,
"keep_anim_length": false,
"layers": ["Base"],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"scale": "1.0",
"slice": "",
"source": "res://scenes/enemies/wisp/wisp_container/wisp_container.aseprite",
"source_uid": 652829848734918332
}
metadata/_aseprite_wizard_source_file_hash_ = "8fdb51fd490be86ab7008bf25407f604"

[node name="SpriteBack" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -6)
texture = SubResource("PortableCompressedTexture2D_q07fn")
offset = Vector2(0, -26)
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 1,
"keep_anim_length": false,
"layers": ["Glass (back"],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"scale": "1.0",
"slice": "",
"source": "res://scenes/enemies/wisp/wisp_container/wisp_container.aseprite",
"source_uid": 652829848734918332
}
metadata/_aseprite_wizard_source_file_hash_ = "8fdb51fd490be86ab7008bf25407f604"

[node name="SpriteFront" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("PortableCompressedTexture2D_n8nvc")
offset = Vector2(0, -32)
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"convert_fps_field": 60.0,
"convert_ms_field": 16.0,
"convert_to_fps": false,
"embed_tex": true,
"i_mode": 1,
"keep_anim_length": false,
"layers": ["Glass (front)"],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "",
"scale": "1.0",
"slice": "",
"source": "res://scenes/enemies/wisp/wisp_container/wisp_container.aseprite",
"source_uid": 652829848734918332
}
metadata/_aseprite_wizard_source_file_hash_ = "8fdb51fd490be86ab7008bf25407f604"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -22)
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
trail_lifetime = 1.0
process_material = SubResource("ParticleProcessMaterial_n8nvc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-6, 0, 6, 0, 6, -10, 6, -11, -6, -11)

[node name="Hurtbox" parent="." instance=ExtResource("3_54q02")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -17)
shape = SubResource("RectangleShape2D_n8nvc")

[node name="FragmentSpawner" type="Node2D" parent="."]
position = Vector2(0, -12)
script = ExtResource("4_q07fn")
fragment_config = ExtResource("5_n8nvc")
num_fragments = 6
metadata/_custom_type_script = "uid://c8womih1r7np5"
